[WIP][FIX] Fix sticky alignment on firefox

--- a/src/views/KanbanBoardView.css
+++ b/src/views/KanbanBoardView.css
@@ -39,7 +39,7 @@ table.KanbanBoardView-board td {
     border: solid 1px var(--main-text-color);
     border-collapse: collapse;
     padding: 5px;
-    vertical-align: middle;
+    vertical-align: top;
 }
 .KanbanBoardView-sticky-wrap {
     display: flex;
